--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
     <head>
-        <title>AngularJS</title>
+        <title>Hola AngularJS</title>
     </head>
-    <body>
-      
+    <body ng-controller="PrimerController">
+    <h1>{{saludo}}</h1>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="js/app.js"></script>
     </body>
 </html>
